# fastapi-esbuild

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
examples/minimal_app/: main.py
examples/minimal_app/frontend/: index.tsx  package.json
src/fastapi_esbuild/: __init__.py  build.py  bundler.py  bundler_config.py  cache.py  cache_dir.py  config.py  deps.py  jinja2_ContextChanger_extention.py  metafile.py  models.py  page.py  templates.py
src/fastapi_esbuild/esbuild/: __init__.py  installation.py
src/fastapi_esbuild/templates/: built.html
src/fastapi_esbuild/templates/assets/: css.html  module.html
